# caldav_mcp

./: .gitignore  README.md  pyproject.toml
src/caldav_mcp/: __init__.py  caldav_client.py  cli.py  install.py  main.py  mcp_server.py
src/caldav_mcp/tests/: __init__.py  test_caldav_client.py  test_integration.py  test_mcp_server.py
