[tool.poetry]
name = "caldav-mcp"
version = "0.1.0"
description = "MCP server for CalDAV integration"
authors = ["Mark <mark@example.com>"]
readme = "README.md"
packages = [{include = "caldav_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = {git = "https://github.com/jlowin/fastmcp.git"}
caldav = "^1.3.5"
pydantic = "^2.4.0"
httpx = "^0.28.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
caldav-mcp = "caldav_mcp.main:run"
